# amdmemorytweak

./: CMakeLists.txt  init.sh
linux/: AmdMemTweak.cpp
